# numbers-and-letters-app

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
src/numbers_and_letters_app/: __main__.py  app.py
src/numbers_and_letters_app/static/: app.js  index.html  style.css
