[project]
name = "numbers-and-letters-app"
version = "0.1.0"
description = "Educational web app for kids to learn letters and numbers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numbers_and_letters_app"]
